@@ -1,5 +1,9 @@
-momentuHMM 1.5.2 2020-04-30
+momentuHMM 1.5.2 2020-05-04
 -----------------
+CHANGES
+
+* plotPR now uses car::qqPlot for pseudo-residual qq-plots
+
 BUG FIXES
 
 * mixtureProbs function produced an error when initial distribution formula includes covariates
